2012-08-10  Dirk Eddelbuettel  <edd@dexter>

	* inst/examples/armadillo/: New example directory for Armadillo
	* inst/examples/armadillo/rinside_arma0.cpp: simple first example
	* inst/examples/armadillo/rinside_arma1.cpp: second example

2012-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample12.cpp: New example

2012-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/wt/wtdensity.cpp: Extended / prettyfied Wt example to
	use CSS styling as well as some simple headers and descriptions
	* inst/examples/wt/wtdensity.css: Added simple CSS markup
	* inst/examples/wt/wtdensity.xml: Added text and headers

	* inst/examples/wt/wtdensityPlain.cpp: Renamed old version

2012-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Added BugReports: and MailingList: fields

2012-01-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/cmake/CMakeLists.txt: Added patch by Peter
	which adds CMake build support on Windows

2012-01-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.6

	* DESCRIPTION: Updated Description: text

2012-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Correct console writer on Windows to not use
	Rprintf (with thanks to both James Bates and John Brzustowski)

	* src/RInside.cpp: Update RNG seeding to same scheme now used by
	R which blends both (millisecond) time and process id

	* src/RInside.cpp: Replace fprintf(stderr,...) with Rf_error(...)
	* src/setenv/setenv.c: Idem

	* inst/examples/*: Added CMake build support for all example
	directories kindly provided by Peter Aberline; this helps when coding
	inside of IDEs such as Eclipse, KDevelop or Code::Blocks

	* inst/examples/standard/Makefile.win: Allow for an R_ARCH variable
	to be set to enforce either i386 or x64 builds

2011-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.5

	* src/RInside.cpp: Applied (a slightly simpler versions of) a patch