@@ -1,3 +1,9 @@
+2012-08-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/examples/eigen/: New example directory for Eigen
+	* inst/examples/eigen/rinside_eigen0.cpp: simple first example
+	* inst/examples/eigen/rinside_eigen1.cpp: second example
+
 2012-08-10  Dirk Eddelbuettel  <edd@dexter>
 
 	* inst/examples/armadillo/: New example directory for Armadillo
